<resources>
    <string name="app_name">Weatherapp</string>
    <string name="home">Saved cities</string>
    <string name="favourites">Favourites</string>
    <string name="adrian_patrascu">Adrian Patrascu</string>
    <string name="user_logo">User logo</string>
    <string name="nav_close">Close Navigation Bar</string>
    <string name="nav_open">Navigation Bar Open</string>
    <string name="weather_seeker">Weather Seeker</string>
    <string name="pitesti">Pitesti</string>
    <string name="_15_c">15 C</string>
    <string name="aarhus">Aarhus</string>
    <string name="_3_c">-3 C</string>
    <string name="horsens">Horsens</string>
    <string name="_5_c">5 C</string>
    <string name="copenhagen">Copenhagen</string>
    <string name="_0_c">0 C</string>
    <string name="text">Text</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="bucuresti">Bucuresti</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="u2103">C</string>
    <string name="today">Today</string>
    <string name="_20">20</string>
    <string name="_9">9</string>
    <string name="_21">21</string>
    <string name="friday">Friday</string>
    <string name="_22">22</string>
    <string name="_11">11</string>
    <string name="saturday">Saturday</string>
    <string name="_23">23</string>
    <string name="_8">8</string>
    <string name="sunday">Sunday</string>
    <string name="_24">24</string>
    <string name="_7">7</string>
    <string name="monday">Monday</string>
    <string name="_19">19</string>
    <string name="_6">6</string>
    <string name="now">Now</string>
    <string name="_20_">20</string>
    <string name="_20_48">20:48</string>
    <string name="_21_">21</string>
    <string name="_22_">22</string>
    <string name="_23_">23</string>
    <string name="sunset">Sunset</string>
    <string name="_20_u2103">20_/u2103</string>
    <string name="_20__">20</string>
    <string name="_19__">19</string>
    <string name="_18">18</string>
    <string name="_16">16</string>
    <string name="_15_">15</string>
    <string name="_13">13</string>
    <string name="show_more">Show more</string>
    <string name="settings">Settings</string>
    <string name="unit_type">Unit type</string>
    <string name="log_out">Log out</string>
    <string name="Fahr">F</string>
    <string name="icon">icon</string>
    <string name="email_and_password">Email and password</string>
    <string name="signed_out">Signed out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">Sign out</string>
    <string name="reload">Reload</string>
    <string name="verify_email">Verify email</string>
    <string name="tuesday">Tuesday</string>
    <string name="_5">5</string>
    <string name="wednesday">Wednesday</string>
    <string name="_25">25</string>
    <string name="thursday">Thursday</string>
    <string name="enter_city_postcode_or_airport_location">Enter city, postcode or airport location</string>
    <string name="cancel">Cancel</string>
    <string name="contact_us">Contact us</string>
    <string name="you_can_contact_us_at_weatherseeker_gmail_com_or_call_us_at_50356794">You can contact us at weatherseeker@gmail.com or call us at 50356794</string>
    <string name="email_">Email:</string>
    <string name="subject">Subject</string>
    <string name="subject_">Subject:</string>
    <string name="email_body">Email Body:</string>
    <string name="body">Body</string>
    <string name="send_email">Send email</string>
    <string name="search">Search</string>
    <string name="enter_city">Enter city name:</string>
    <string name="today_partly_cloudy_currently_the_high_today_was_forecast_at_20_degrees">Today: Partly cloudy currently. The high today was forecast at 20 degrees.</string>
    <string name="sunrise">Sunrise</string>
    <string name="_05_36">05:36</string>
    <string name="email_and_password_">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name= "loading">Loading…</string>
    <string name= "auth_fail">Authentification failed.</string>
    <string name="see_more_details">See more details</string>
    <string name="see_more_details_about_today_s_weather">See more details about today\'s weather</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="_20___">20%</string>
    <string name="humidity">Humidity</string>
    <string name="_47">47%</string>
    <string name="wind">Wind</string>
    <string name="n_5_km_hr">N 5 km/hr</string>
    <string name="feels_like">Feels like</string>
    <string name="_20_____">20</string>
    <string name="precipitation">Precipitation</string>
    <string name="_0_cm">0 cm</string>
    <string name="pressure">Pressure</string>
    <string name="_1020_hpa">1020 hPa</string>
    <string name="visibility">Visibility</string>
    <string name="_9_7_km">9,7 km</string>
    <string name="uv_index">UV Index</string>
    <string name="_1">1</string>
    <string name="welcome_to_weather_seeker">Welcome to Weather Seeker!</string>
    <string name="friday_">Friday</string>
    <string name="_17">17</string>
    <string name="_12">12</string>
    <string name="_14">14</string>
    <string name="_22___">22</string>
    <string name="_18___">18</string>
    <string name="_17_">17</string>
    <string name="_21___">21</string>
    <string name="_15">15</string>
    <string name="_9__">9</string>
    <string name="bob_builder">Bob Builder</string>
    <string name="add_image">Add Image</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="_10_c">10 C</string>
    <string name="_20_c">20 C</string>
    <string name="user_name_adi">Adrian Patrascu</string>

</resources>
